WP-7793 people title alignment issues style fixes

--- a/sass/conditionals/faculty-research/meta-research-detail.sass
+++ b/sass/conditionals/faculty-research/meta-research-detail.sass
@@ -105,7 +105,8 @@
     .field-name-field-image-single-public
       float: left
       margin-right: 12px
-      max-width: 40px
+      max-width: 42px
+      height: 60px
 
     // Name
     .group-wrapper-name,
