--- a/sass/conditionals/insights/related-to-idea-story.sass
+++ b/sass/conditionals/insights/related-to-idea-story.sass
@@ -55,13 +55,14 @@
   .field-name-field-person-ref-unlimited
     .node
       +clearfix
-      padding: 12px $standard-padding
+      padding: 7px $standard-padding
 
     // Image
     .field-name-field-image-single-public
       float: left
       margin-right: 12px
-      max-width: 40px
+      max-width: 42px
+      height: 60px
 
     // Name
     .group-wrapper-name,
@@ -268,8 +269,11 @@
 .group-wrapper-related .field-collection-item-field-related-faculty .person-position,
 .group-wrapper-related .faculty-author-wrapper .field-name-title,
 .group-wrapper-related .faculty-author-wrapper .person-position,
+.group-wrapper-related .field-name-field-person-ref-unlimited .person-position,
+.group-wrapper-related .field-collection-item-field-related-faculty .person-position .person-area,
+.group-wrapper-related .faculty-author-wrapper .person-position .person-area,
+.group-wrapper-related .field-name-field-person-ref-unlimited .field-name-title
   padding-left: 0px
 
-.group-wrapper-related .field-collection-item-field-related-faculty .person-position .person-area,
-.group-wrapper-related .faculty-author-wrapper .person-position .person-area
-  padding-left: 51px
+.group-wrapper-related .field-name-field-person-ref-unlimited .person-position .field-collection-item-field-staff-item .field-name-field-department-office
+  padding-left: 52px
